@@ -20,14 +20,15 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Locale;
 import java.util.stream.Stream;
 
 import io.netty.handler.codec.http.DefaultHttpHeaders;
 import io.undertow.util.HeaderMap;
 import org.apache.tomcat.util.http.MimeHeaders;
+import org.assertj.core.api.StringAssert;
 import org.eclipse.jetty.http.HttpFields;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -89,13 +90,13 @@ class HeadersAdaptersTests {
 		headers.add("TestHeader", "first");
 		headers.add("TestHeader", "second");
 		assertThat(headers.getFirst("TestHeader")).isEqualTo("first");
-		assertThat(headers.get("TestHeader")).element(0).isEqualTo("first");
+		assertThat(headers.get("TestHeader"), StringAssert.class).element(0).isEqualTo("first");
 	}
 
 	@ParameterizedHeadersTest
 	void putShouldOverrideExisting(MultiValueMap<String, String> headers) {
 		headers.add("TestHeader", "first");
-		headers.put("TestHeader", Arrays.asList("override"));
+		headers.put("TestHeader", List.of("override"));
 		assertThat(headers.getFirst("TestHeader")).isEqualTo("override");
 		assertThat(headers.get("TestHeader")).hasSize(1);
 	}
